Quickly fixed spacing error on header

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -1,7 +1,7 @@
 .Header {
     background-color: var(--clr-primary-500);
 
-    padding: 1em;
+    padding: 1em 0;
 
     .container {
         display: flex;
